manifests/keycloak/manifest.yaml
---
# Source: keycloakx/templates/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-keycloakx-headless
  namespace: keycloak
  labels:
    helm.sh/chart: keycloakx-7.2.2
    app.kubernetes.io/name: keycloakx
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/version: "26.6.4"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: headless
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: keycloakx
    app.kubernetes.io/instance: keycloak

---
# Source: keycloakx/templates/service-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-keycloakx-http
  namespace: keycloak
  labels:
    helm.sh/chart: keycloakx-7.2.2
    app.kubernetes.io/name: keycloakx
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/version: "26.6.4"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: http
spec:
  type: ClusterIP
  ports:
    - name: 'http-internal'
      port: 9000
      protocol: TCP
      targetPort: 'http-internal'
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: https
      port: 8443
      targetPort: https
      protocol: TCP
  selector:
    app.kubernetes.io/name: keycloakx
    app.kubernetes.io/instance: keycloak

---
# Source: keycloakx/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak-keycloakx
  namespace: keycloak
  labels:
    helm.sh/chart: keycloakx-7.2.2
    app.kubernetes.io/name: keycloakx
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/version: "26.6.4"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloakx
      app.kubernetes.io/instance: keycloak
  replicas: 1
  serviceName: keycloak-keycloakx-headless
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/config-startup: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
        checksum/secrets: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
      labels:
        app.kubernetes.io/name: keycloakx
        app.kubernetes.io/instance: keycloak
    spec:
      containers:
        - name: keycloak
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
          image: "quay.io/keycloak/keycloak:26.6.4"
          imagePullPolicy: IfNotPresent
          command:
            - /opt/keycloak/bin/kc.sh
            - start
            - --http-port=8080
            - --import-realm
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: 'http-internal'
              containerPort: 9000
              protocol: TCP
            - name: https
              containerPort: 8443
              protocol: TCP
          livenessProbe:
            httpGet:
              path: '/auth/health/live'
              port: 'http-internal'
              scheme: 'HTTP'
            initialDelaySeconds: 0
            timeoutSeconds: 5
            
          readinessProbe:
            httpGet:
              path: '/auth/health/ready'
              port: 'http-internal'
              scheme: 'HTTP'
            initialDelaySeconds: 10
            timeoutSeconds: 1
            
          startupProbe:
            httpGet:
              path: '/auth/health'
              port: 'http-internal'
              scheme: 'HTTP'
            initialDelaySeconds: 15
            timeoutSeconds: 1
            failureThreshold: 60
            periodSeconds: 5
            
          resources:
            {}
          volumeMounts:
            - name: realm-config
              mountPath: /opt/keycloak/data/import
              readOnly: true
            
      serviceAccountName: keycloak-keycloakx
      securityContext:
        fsGroup: 1000
      enableServiceLinks: true
      restartPolicy: Always
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/name: keycloakx
                  app.kubernetes.io/instance: keycloak
                matchExpressions:
                  - key: app.kubernetes.io/component
                    operator: NotIn
                    values:
                      - test
              topologyKey: kubernetes.io/hostname
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: keycloakx
                    app.kubernetes.io/instance: keycloak
                  matchExpressions:
                    - key: app.kubernetes.io/component
                      operator: NotIn
                      values:
                        - test
                topologyKey: topology.kubernetes.io/zone
        
      terminationGracePeriodSeconds: 60
      volumes:
        - name: realm-config
          configMap:
            name: keycloak-realm
        

---
# Source: keycloakx/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-keycloakx
  namespace: keycloak
  annotations:
    argocd.argoproj.io/ignore-healthcheck: "true"
  labels:
    helm.sh/chart: keycloakx-7.2.2
    app.kubernetes.io/name: keycloakx
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/version: "26.6.4"
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: contour
  rules:
    - host: "keycloak.local"
      http:
        paths:
          - path: "/auth/"
            pathType: Prefix
            backend:
              service:
                name: keycloak-keycloakx-http
                port:
                  name: http
